handle error in private key
